Modified yml for matrix run

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,13 +10,14 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  TestJob:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x]
+        os: [ubuntu-latest, windows-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
