--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,6 +10,16 @@ on:
     branches: [ "master" ]
 
 jobs:
+  BuildJob:
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: npm install and build webpack
+        uses: actions/checkout@v3
+      - run: |
+           npm-install
+           npm run build
+
   TestJob:
 
     runs-on: ${{ matrix.os }}
@@ -17,7 +27,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -27,6 +37,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test -- -u
+    - name: npm install and test
+      run: | 
+        npm run build --if-present
+        npm test -- -u
