--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,8 +14,9 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: npm install and build webpack
-        uses: actions/checkout@v3
+        uses: actions/setup-node@v3
       - run: |
            npm-install
            npm run build
