--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,7 @@ jobs:
       - name: npm install and build webpack
         run: |
           npm ci
-          npm-install
-          npm run build
+          npm run build --if-present
 
   TestJob:
 
