--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      # - name: Use Node.js 14
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 14.x
-      #     cache: 'npm'
+      - name: Use Node.js 14
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+          cache: 'npm'
       - name: npm install and build webpack
         run: |
           npm ci
