--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,5 +45,5 @@ jobs:
         cache: 'npm'
     - name: npm install and test
       run: | 
-        npm run build --if-present
+        npm ci
         npm test -- -u
