--- a/.github/workflows/giphy-generator.yml
+++ b/.github/workflows/giphy-generator.yml
@@ -7,6 +7,7 @@ on:
         types: [opened,edited]
     issue_comment:
         types: [created,edited]
+    workflow_dispatch:
 
 jobs:
     giphy-generator:
